# cookiecutter-pypackage

./: setup.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  environment.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/docs/: conf.py
