[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
authorss = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.rst"

homepage = "https://pypi.org/project/{{cookiecutter.package_name}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo}}"
documentation = "https://{{cookiecutter.package_name}}.readthedocs.io"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: {{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}",
]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_major_version}}.{{cookiecutter.python_minor_version}}"

# TODO: Remove these and add your library's requirements
click = "*"
minilog = "*"

[tool.poetry.dev-dependencies]
# Formatters
black = "^22.1"
isort = "^5.10"

#Linters
pydocstyle = "^6.1.1"
doc8 = "^0.10.1"
rstcheck = "^3.3.1"

# Testing
pytest = "^7.0.1"
tox = "^3.24.0"

# Documentation
Sphinx = "^4.4.0"
myst-parser = "^0.17.0"
sphinx-rtd-theme = "^1.0.0"

# Tooling
bump2version = "^1.0.1"
pre-commit = "^2.17.0"
commitizen = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.cli:main"

[tool.isort]
profile = "black"
skip_glob = ".pytest_cache/*"

[tool.black]
target-version = ['py38']
quiet = true
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "pycmtensor/__init__.py"
]

[tool.pytest]
addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=xml
--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

markers = []

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]